# lol-scraper

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 7b7d81f74b41_add_unique_constraint_on_snapshot_game_.py  aea084e65cb0_use_video_timestamp_instead_of_ocr_d_.py  e40ac3f08341_initial_schema.py
scripts/: dev_up.sh
src/lol_scraper/: cli.py  config.py  logging_conf.py
src/lol_scraper/extraction/: parser.py  schemas.py
src/lol_scraper/ingestion/: schemas.py  youtube.py
src/lol_scraper/ocr/: __init__.py  base.py  easyocr_provider.py  paddleocr_provider.py  postprocess.py
src/lol_scraper/pipeline/: chapters.py  run.py
src/lol_scraper/storage/: db.py  models.py  repository.py
src/lol_scraper/utils/: timecodes.py
src/lol_scraper/video/: frames.py  regions.py
tests/: test_chapters.py  test_ocr_postprocess.py  test_parser.py  test_timecodes.py
