[project]
name = "lol-scraper"
version = "0.1.0"
description = "Scrapes League of Legends esports VODs from YouTube and extracts structured game stats via OCR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "easyocr>=1.7.2",
    "opencv-python-headless>=5.0.0.93",
    "paddleocr>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlalchemy>=2.0.51",
    "structlog>=26.1.0",
    "typer>=0.26.8",
    "yt-dlp>=2026.6.9",
]

[project.scripts]
lolscraper = "lol_scraper.cli:app"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
